# distill

./: .gitignore  Cargo.toml  Makefile  README.md  Skeleton_Team-topologies_RuLit_Me_714859-distilled.epub  prd.md
docs/plans/: 2026-03-17-distill-design.md  2026-03-17-distill-implementation.md
research/: .env.example  .gitignore  README.md  RESEARCH_SPEC.md  algorithms.py  charts.py  config.toml  eval_metrics.py  fetch_book.py  judge.py  prompts.py  pyproject.toml  report.py  run.py
research/reports/: eval_report.json  report.md
src/: cli.rs  config.rs  config_cmd.rs  error.rs  lib.rs  main.rs  mode.rs  progress.rs  ui.rs
src/compress/: mod.rs  pass1.rs  pass2.rs  pass3.rs
src/export/: epub.rs  html.rs  markdown.rs  mod.rs
src/ingest/: epub.rs  mod.rs  pdf.rs  url.rs
src/llm/: mod.rs  parse.rs  prompt.rs  strategy.rs
src/segment/: chunk.rs  mod.rs
src/state/: checkpoint.rs  mod.rs
tests/: integration.rs
tests/integration/helpers/: mock_llm.rs
