[package]
name = "distill"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Structure-preserving semantic compression engine for books and articles"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.18"
epub-builder = "0.8"
pdf-extract = "0.10"
epub = "2"
readability = "0.3"
sha2 = "0.10"
html2md = "0.2"
url = "2"
owo-colors = { version = "4", features = ["supports-colors"] }
dirs = "6"
toml = "0.8"
tempfile = "3"

[dev-dependencies]
wiremock = "0.6"
